WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262930
(REGRESSION (
265731@main
): fast/scrolling/rtl-scrollbars-animation-property.html is a constant failure)
https://bugs.webkit.org/show_bug.cgi?id=262930
Summary
(REGRESSION (265731@main): fast/scrolling/rtl-scrollbars-animation-property.h...
Nikos Mouchtaris
Reported
2023-10-09 17:03:58 PDT
(REGRESSION (
265731@main
): fast/scrolling/rtl-scrollbars-animation-property.html is a constant failure)
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2023-10-09 17:04:16 PDT
rdar://114349934
Nikos Mouchtaris
Comment 2
2023-10-09 17:09:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18875
EWS
Comment 3
2023-10-16 17:13:19 PDT
Committed
269390@main
(9320b5020638): <
https://commits.webkit.org/269390@main
> Reviewed commits have been landed. Closing PR #18875 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug